logos added and updated

--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,73 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Opencanvas</title>
-        <!--  - an open canvas just for you -->
-    </head>
-    <body>
-        <div id="root"></div>
-        <script type="module" src="/src/main.jsx"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Opencanvas • An open canvas for you to fill</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta
+      name="description"
+      content="A site for art lovers to browse and share all types of art."
+    />
+    <meta
+      name="keywords"
+      content="art, photography, drawing, literature, portfolio"
+    />
+
+    <meta
+      property="og:title"
+      content="Opencanvas • An open canvas for you to fill"
+    />
+    <meta
+      property="og:description"
+      content="A site for art lovers to browse and share all types of art."
+    />
+    <meta
+      property="og:image"
+      content="https://www.opencanvas.blog/social-preview.png"
+    />
+    <meta property="og:url" content="https://www.opencanvas.blog" />
+    <meta property="og:type" content="website" />
+
+    <meta
+      name="twitter:title"
+      content="Opencanvas • An open canvas for you to fill"
+    />
+    <meta
+      name="twitter:description"
+      content="A site for art lovers to browse and share all types of art."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.opencanvas.blog/social-preview.png"
+    />
+
+    <link rel="canonical" href="https://www.opencanvas.blog" />
+
+    <meta
+      property="og:site_name"
+      content="Opencanvas • An open canvas for you to fill"
+    />
+    <meta property="og:locale" content="en_US" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "Organisation",
+        "name": "Opencanvas",
+        "image": ["https://www.opencanvas.blog/social-preview.png"],
+        "datePublished": "2025-01-10",
+        "dateModified": "2025-1-18",
+        "author": {
+          "@type": "Person",
+          "name": "Subhajit Gorai"
+        },
+        "url": "https://www.opencanvas.blog"
+      }
+    </script>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
