--- a/client/index.html
+++ b/client/index.html
@@ -1,73 +1,73 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Opencanvas • An open canvas for you to fill</title>
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta
-      name="description"
-      content="A site for art lovers to browse and share all types of art."
-    />
-    <meta
-      name="keywords"
-      content="art, photography, drawing, literature, portfolio"
-    />
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>myOPENCANVAS</title>
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <meta
+            name="description"
+            content="A site for art lovers to browse and share written arts and photography."
+        />
+        <meta
+            name="keywords"
+            content="art, photography, drawing, literature, portfolio"
+        />
 
-    <meta
-      property="og:title"
-      content="Opencanvas • An open canvas for you to fill"
-    />
-    <meta
-      property="og:description"
-      content="A site for art lovers to browse and share all types of art."
-    />
-    <meta
-      property="og:image"
-      content="https://www.opencanvas.blog/social-preview.png"
-    />
-    <meta property="og:url" content="https://www.opencanvas.blog" />
-    <meta property="og:type" content="website" />
+        <meta
+            property="og:title"
+            content="myOPENCANVAS • An open canvas for you to fill"
+        />
+        <meta
+            property="og:description"
+            content="A site for art lovers to browse and share written arts and photography."
+        />
+        <meta
+            property="og:image"
+            content="https://www.myopencanvas.in/social-preview.png"
+        />
+        <meta property="og:url" content="https://www.myopencanvas.in" />
+        <meta property="og:type" content="website" />
 
-    <meta
-      name="twitter:title"
-      content="Opencanvas • An open canvas for you to fill"
-    />
-    <meta
-      name="twitter:description"
-      content="A site for art lovers to browse and share all types of art."
-    />
-    <meta
-      name="twitter:image"
-      content="https://www.opencanvas.blog/social-preview.png"
-    />
+        <meta
+            name="twitter:title"
+            content="myOPENCANVAS • An open canvas for you to fill"
+        />
+        <meta
+            name="twitter:description"
+            content="A site for art lovers to browse and share written arts and photography."
+        />
+        <meta
+            name="twitter:image"
+            content="https://www.myopencanvas.in/social-preview.png"
+        />
 
-    <link rel="canonical" href="https://www.opencanvas.blog" />
+        <link rel="canonical" href="https://www.myopencanvas.in" />
 
-    <meta
-      property="og:site_name"
-      content="Opencanvas • An open canvas for you to fill"
-    />
-    <meta property="og:locale" content="en_US" />
+        <meta
+            property="og:site_name"
+            content="myOPENCANVAS • An open canvas for you to fill"
+        />
+        <meta property="og:locale" content="en_US" />
 
-    <script type="application/ld+json">
-      {
-        "@context": "http://schema.org",
-        "@type": "Organisation",
-        "name": "Opencanvas",
-        "image": ["https://www.opencanvas.blog/social-preview.png"],
-        "datePublished": "2025-01-10",
-        "dateModified": "2025-1-18",
-        "author": {
-          "@type": "Person",
-          "name": "Subhajit Gorai"
-        },
-        "url": "https://www.opencanvas.blog"
-      }
-    </script>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+        <script type="application/ld+json">
+            {
+                "@context": "http://schema.org",
+                "@type": "Organisation",
+                "name": "Opencanvas",
+                "image": ["https://www.myopencanvas.in/social-preview.png"],
+                "datePublished": "2025-01-10",
+                "dateModified": "2025-1-18",
+                "author": {
+                    "@type": "Person",
+                    "name": "Subhajit Gorai"
+                },
+                "url": "https://www.myopencanvas.in"
+            }
+        </script>
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.jsx"></script>
+    </body>
 </html>
