--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>myOPENCANVAS</title>
+        <title>myOpenCanvas</title>
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta
             name="description"
@@ -16,7 +16,7 @@
 
         <meta
             property="og:title"
-            content="myOPENCANVAS • An open canvas for you to fill"
+            content="myOpenCanvas • An open canvas for you to fill"
         />
         <meta
             property="og:description"
@@ -31,7 +31,7 @@
 
         <meta
             name="twitter:title"
-            content="myOPENCANVAS • An open canvas for you to fill"
+            content="myOpenCanvas • An open canvas for you to fill"
         />
         <meta
             name="twitter:description"
@@ -46,7 +46,7 @@
 
         <meta
             property="og:site_name"
-            content="myOPENCANVAS • An open canvas for you to fill"
+            content="myOpenCanvas • An open canvas for you to fill"
         />
         <meta property="og:locale" content="en_US" />
 
