updated seo data

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>myOpenCanvas</title>
+        <title>OpenCanvas</title>
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta
             name="description"
@@ -11,12 +11,12 @@
         />
         <meta
             name="keywords"
-            content="art, photography, drawing, literature, portfolio"
+            content="opencanvas, art, photography, blog, story, portfolio"
         />
 
         <meta
             property="og:title"
-            content="myOpenCanvas • An open canvas for you to fill"
+            content="OpenCanvas • An open canvas for you to fill"
         />
         <meta
             property="og:description"
@@ -24,14 +24,14 @@
         />
         <meta
             property="og:image"
-            content="https://www.myopencanvas.in/social-preview.png"
+            content="https://www.opencanvas.blog/social-preview.png"
         />
-        <meta property="og:url" content="https://www.myopencanvas.in" />
+        <meta property="og:url" content="https://www.opencanvas.blog" />
         <meta property="og:type" content="website" />
 
         <meta
             name="twitter:title"
-            content="myOpenCanvas • An open canvas for you to fill"
+            content="OpenCanvas • An open canvas for you to fill"
         />
         <meta
             name="twitter:description"
@@ -39,30 +39,34 @@
         />
         <meta
             name="twitter:image"
-            content="https://www.myopencanvas.in/social-preview.png"
+            content="https://www.opencanvas.blog/social-preview.png"
         />
 
-        <link rel="canonical" href="https://www.myopencanvas.in" />
+        <link rel="canonical" href="https://www.opencanvas.blog" />
 
         <meta
             property="og:site_name"
-            content="myOpenCanvas • An open canvas for you to fill"
+            content="OpenCanvas • An open canvas for you to fill"
         />
         <meta property="og:locale" content="en_US" />
 
         <script type="application/ld+json">
             {
                 "@context": "http://schema.org",
-                "@type": "Organisation",
-                "name": "Opencanvas",
-                "image": ["https://www.myopencanvas.in/social-preview.png"],
-                "datePublished": "2025-01-10",
-                "dateModified": "2025-1-18",
+                "@type": "Organization",
+                "name": "OpenCanvas",
+                "headline": "OpenCanvas • An open canvas for you to fill",
+                "description": "A site for art lovers to browse and share written arts and photography.",
                 "author": {
                     "@type": "Person",
                     "name": "Subhajit Gorai"
                 },
-                "url": "https://www.myopencanvas.in"
+                "image": ["https://www.opencanvas.blog/social-preview.png"],
+                "logo": "https://www.opencanvas.blog/favicon.svg",
+                "url": "https://www.opencanvas.blog",
+                "keywords": "opencanvas, art, photography, blog, story, portfolio",
+                "datePublished": "2025-01-10",
+                "dateModified": "2025-02-18"
             }
         </script>
     </head>
