added google search verification

--- a/client/index.html
+++ b/client/index.html
@@ -69,6 +69,11 @@
                 "dateModified": "2025-02-18"
             }
         </script>
+
+        <meta
+            name="google-site-verification"
+            content="7lwe1iVe00A3Olk2z7APCGDUJ6Ntd3Gu6JIl16XULGg"
+        />
     </head>
     <body>
         <div id="root"></div>
