--- a/client/index.html
+++ b/client/index.html
@@ -70,6 +70,7 @@
             }
         </script>
 
+        <!-- google site verification token -->
         <meta
             name="google-site-verification"
             content="7lwe1iVe00A3Olk2z7APCGDUJ6Ntd3Gu6JIl16XULGg"
