--- a/client/index.html
+++ b/client/index.html
@@ -75,7 +75,7 @@
             content="7lwe1iVe00A3Olk2z7APCGDUJ6Ntd3Gu6JIl16XULGg"
         />
     </head>
-    <body>
+    <body class="bg-white dark:bg-black">
         <div id="root"></div>
         <script type="module" src="/src/main.jsx"></script>
     </body>
