update: multiple changes and path update

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OpenCanvas</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="manifest" href="/manifest.json" />
     <meta
       name="description"
       content="A site for art lovers to browse and share written arts and photography."
